--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <title>Tauri + Svelte + TS</title>
   </head>
 
-  <body>
+  <body class="theme-dark">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
