refactor: use ids instead of indices

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tauri + Svelte + TS</title>
   </head>
 
-  <body class="theme-dark">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
