fix: animation not playing when falling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pathfinder</title>
   </head>
-  <body class="theme-dark">
+  <body>
+    <!-- <body class="theme-dark"> -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
