--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="root"></div>
     <div id="tooltip-root"></div>
+    <div id="overlay-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
