--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>pathfinder</title>
+    <title>pathsolver</title>
   </head>
   <body>
     <div id="root"></div>
