chore: change description

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta
+      name="description"
+      content="Find ways to compute a number in this open-source mathematical puzzle game."
+    />
     <title>pathsolver</title>
   </head>
   <body>
